data/derived/comb/progs/unify/prog2282.ml.out
Characters 141-144:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.sprintf "sine is %lf " ans
                                                                                   ^^^
Error: This expression has type float but an expression was expected of type
         int
